@@ -911,8 +911,16 @@ SCIP_RETCODE loadTcliquegraph(
    /* add all implications between used variables to the tclique graph */
    SCIP_CALL( tcliquegraphAddImplics(scip, sepadata->tcliquegraph, cliquegraphidx) );
 
-   /* construct the dense clique table */
-   SCIP_CALL( tcliquegraphConstructCliqueTable(scip, sepadata->tcliquegraph, sepadata->cliquetablemem, sepadata->cliquedensity) );
+   /* it occurs that it might be that some cliques were not yet removed from the global clique array, so SCIPgetNClique
+    * can be greater than 0, even if there is no clique with some variables left
+    *
+    * @todo clean up empty cliques
+    */
+   if( sepadata->tcliquegraph != NULL )
+   {
+      /* construct the dense clique table */
+      SCIP_CALL( tcliquegraphConstructCliqueTable(scip, sepadata->tcliquegraph, sepadata->cliquetablemem, sepadata->cliquedensity) );
+   }
 
    /* free temporary memory */
    SCIPfreeBufferArray(scip, &cliquegraphidx[1]);
